--- a/overwatch/css/dev/style.scss
+++ b/overwatch/css/dev/style.scss
@@ -859,7 +859,7 @@ nav {
 }
 
 #primary_nav_wrap ul li:hover {
-  background:#111;
+  background:#212121;
 }
 
 #primary_nav_wrap ul ul {
@@ -876,6 +876,9 @@ nav {
 #primary_nav_wrap ul ul li {
   float:none;
   z-index: 9001;
+  &:hover {
+    background:#111;
+  }
 }
 
 #primary_nav_wrap ul ul a {
