--- a/overwatch/css/dev/style.scss
+++ b/overwatch/css/dev/style.scss
@@ -212,7 +212,7 @@ h3 {
     right: 10px;
   }
   p {
-    margin: 0;
+    margin: 0 30px;
     a, a:visited, a:hover {
         color: white;
     }
