--- a/css/dev/style.scss
+++ b/css/dev/style.scss
@@ -230,7 +230,7 @@ h3 {
     right: 10px;
   }
   p {
-    margin: 0;
+    margin: 0 30px;
     a, a:visited, a:hover {
         color: white;
     }
