--- a/css/dev/style.scss
+++ b/css/dev/style.scss
@@ -160,6 +160,29 @@ header {
   }
 }
 
+/*--------------------- FOOTER ---------------------*/
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  ul {
+    list-style: none;
+    padding-left: 0;
+    margin: 2px 0 10px;
+    font-size: 16px;
+    li {
+      display: inline-block;
+      padding: 0px 10px;
+      a {
+        color: #aaa;
+        text-decoration: none;
+      }
+    }
+  }
+}
 
 
 /*--------------------- LOOT BOX ---------------------*/
