--- a/css/dev/style.scss
+++ b/css/dev/style.scss
@@ -160,14 +160,47 @@ header {
   }
 }
 
+#mobilealert {
+    display: block;
+    text-align: center;
+    width: 90%;
+    margin: 30px auto;
+    ul {
+      list-style: none;
+      padding-left: 0;
+      display: inline-block;
+      color: white;
+      background: rgba(0,0,0,0.3);
+      padding: 10px 20px;
+      margin: 0;
+      a {
+        color: white;
+      }
+      span:first-child, span:nth-child(2)  {
+        display: none;
+      }
+      p {
+        margin: 0;
+        a {
+          color: white;
+        }
+      }
+    }
+  }
+
 /*--------------------- FOOTER ---------------------*/
 
 footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   left: 0;
   text-align: center;
   width: 100%;
+
+  @include at-query($min, $large) {
+    position: absolute;
+  }
+
   ul {
     list-style: none;
     padding-left: 0;
