Added event icons to image

--- a/css/dev/_heroes.scss
+++ b/css/dev/_heroes.scss
@@ -116,6 +116,34 @@
 
 /*--------------------- Heroes ---------------------*/
 
+#crate span {
+  background-repeat: no-repeat;
+  background-position: 95% 3%;
+  &.WINTER_WONDERLAND_2016 {
+    background-image: url(../images/events/winter.png);
+  }
+
+  &.SUMMER_GAMES {
+    background-image: url(../images/events/summer.png);
+  }
+
+  &.HALLOWEEN_2016 {
+    background-image: url(../images/events/halloween.png);
+  }
+
+  &.YEAR_OF_THE_ROOSTER_2017 {
+    background-image: url(../images/events/rooster.png);
+  }
+
+  &.ANNIVERSARY_2017 {
+    background-image: url(../images/events/anniversary.png);
+  }
+
+  &.UPRISING_2017 {
+    background-image: url(../images/events/uprising.png);
+  }
+}
+
 #crate li {
   background-image: url(../images/mobile/generic.png);;
   background-repeat: no-repeat;
