Improved overlay icons

--- a/css/dev/_heroes.scss
+++ b/css/dev/_heroes.scss
@@ -120,27 +120,27 @@
   background-repeat: no-repeat;
   background-position: 95% 3%;
   &.WINTER_WONDERLAND_2016 {
-    background-image: url(../images/events/winter.png);
+    background-image: url(../images/overlay/winter.png);
   }
 
   &.SUMMER_GAMES {
-    background-image: url(../images/events/summer.png);
+    background-image: url(../images/overlay/summer.png);
   }
 
   &.HALLOWEEN_2016 {
-    background-image: url(../images/events/halloween.png);
+    background-image: url(../images/overlay/halloween.png);
   }
 
   &.YEAR_OF_THE_ROOSTER_2017 {
-    background-image: url(../images/events/rooster.png);
+    background-image: url(../images/overlay/rooster.png);
   }
 
   &.ANNIVERSARY_2017 {
-    background-image: url(../images/events/anniversary.png);
+    background-image: url(../images/overlay/anniversary.png);
   }
 
   &.UPRISING_2017 {
-    background-image: url(../images/events/uprising.png);
+    background-image: url(../images/overlay/uprising.png);
   }
 }
 
