--- a/css/dev/style.scss
+++ b/css/dev/style.scss
@@ -35,6 +35,8 @@ h1, h2, h3, h4, h5 {
   font-size: 24px;
   font-weight: 700;
   display: block;
+  border-top: 1px solid lighten($main, 10%);
+  border-bottom: 1px solid darken($main, 10%);
   &:hover, &:focus {
     background: $main;
     -webkit-box-shadow: 0px 0px 33px 0px rgba(249, 158, 26, 0.75);
@@ -113,12 +115,13 @@ header {
       max-height: 460px;
       display: table;
       table-layout: fixed;
-      border-radius: 7px;
       span {
         font-weight: 400;
         font-size: 14px;
         display: table-cell;
         vertical-align: middle;
+        border-bottom: 1px solid #ccc;
+        border-top: 1px solid #eee;
       }
     }
   }
@@ -137,13 +140,14 @@ header {
       &.active {
         img {
           background-color: rgba(0,0,0,0.2);
+          border: 1px solid rgba(0,0,0,0.04);
         }
       }
       img {
-        width: 30px;
+        border-radius: 7px;
+        max-width: 24px;
         cursor: pointer;
         padding: 10px;
-        border-radius: 7px;
         &:hover {
           opacity: 0.5;
         }
