--- a/css/dev/_heroes.scss
+++ b/css/dev/_heroes.scss
@@ -143,7 +143,7 @@
     background-image: url(../images/overlay/summer.png);
   }
 
-  &.HALLOWEEN_2016 {
+  &.HALLOWEEN {
     background-image: url(../images/overlay/halloween.png);
   }
 
