--- a/css/dev/_heroes.scss
+++ b/css/dev/_heroes.scss
@@ -135,28 +135,29 @@
 #crate span {
   background-repeat: no-repeat;
   background-position: 95% 3%;
+  background-size: 12%;
   &.WINTER_WONDERLAND_2016 {
-    background-image: url(../images/overlay/winter.png);
+    background-image: url(../images/events/winter.svg);
   }
 
   &.SUMMER_GAMES {
-    background-image: url(../images/overlay/summer.png);
+    background-image: url(../images/events/summer.svg);
   }
 
   &.HALLOWEEN {
-    background-image: url(../images/overlay/halloween.png);
+    background-image: url(../images/events/halloween.svg);
   }
 
   &.YEAR_OF_THE_ROOSTER_2017 {
-    background-image: url(../images/overlay/rooster.png);
+    background-image: url(../images/events/rooster.svg);
   }
 
   &.ANNIVERSARY_2017 {
-    background-image: url(../images/overlay/anniversary.png);
+    background-image: url(../images/events/anniversary.svg);
   }
 
   &.UPRISING_2017 {
-    background-image: url(../images/overlay/uprising.png);
+    background-image: url(../images/events/uprising.svg);
   }
 }
 
