--- a/css/dev/_heroes.scss
+++ b/css/dev/_heroes.scss
@@ -172,6 +172,17 @@
   }
  }
 
+ #crate li.moira {
+  background-image: url(../images/mobile/moira.png);
+  background-repeat: no-repeat;
+  background-position: right;
+  @media only screen and (min-width: 769px) {
+    background-size: cover;
+    background-position: center;
+    background-image: url(../images/moira-full.jpg);
+  }
+}
+
  #crate li.doomfist {
   background-image: url(../images/mobile/doomfist.png);
   background-repeat: no-repeat;
