--- a/css/dev/style.scss
+++ b/css/dev/style.scss
@@ -174,6 +174,12 @@ header {
   }
 }
 
+.material-icons {
+  color: $main;
+  vertical-align: middle;
+  cursor: pointer;
+}
+
 /*--------------------- TWEETS ---------------------*/
 
 .news {
